raffia/tests/error/at-rule/keyframes/qualified-rule.snap
---
source: raffia/tests/error.rs
---
error: keyframe block is expected
  ┌─ qualified-rule.css:2:3
  │
2 │   .from {}
  │   ^


